--- a/conv-trans/main.tex
+++ b/conv-trans/main.tex
@@ -1,158 +1,18 @@
-\section{Bernoulli }
-\begin{enumerate}[label=\thesection.\arabic*.,ref=\thesection.\theenumi]
-\numberwithin{equation}{enumi}
-\numberwithin{figure}{enumi}
-\item The pmf of a Bernoulli distribution is defined as
-\begin{align}
-	p_X(k) = 
-	\begin{cases}
-		q = 1-p & k = 0
-		\\
-		p & k = 1
-		\\
-		0 & \text{otherwise}
-	\end{cases}
-\end{align}
-\item For a Bernoulli random variable $X$ with success probability $p$,
-\begin{align}
-M_X(z)= q+pz^{-1}
-\end{align}
-\item The mean of the Bernoulli distribution is 
-\begin{align}
-	E\brak{X} = p
-\end{align}
-\item 	The following code simulates 100 coin tosses
-	\lstinputlisting{
-codes/bernoulli/coin.py
-}
-\end{enumerate}
-\section{Binomial Distribution}
-\begin{enumerate}[label=\thesection.\arabic*.,ref=\thesection.\theenumi]
-\numberwithin{equation}{enumi}
-\numberwithin{figure}{enumi}
-\item The Binomial distribution is defined as 
+\begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
+%From \eqref{eq:dice_xiz}, 
+\item Let 
+$X_i$ be independent.  For 
 \begin{align}
 X &= X_1+X_2+...+X_n,
-\end{align}
-Where $X_i$ are i.i.d bernoulli.
-\item For a Binomial random variable $X$ with parameters $n,p$,
-\begin{align}
-\label{eq:mgf-binom}
-M_X(z)= \brak{q+pz^{-1}}^n
-\end{align}
-\item The mean for the Binomial r.v. is
-\begin{align}
-\label{eq:mean-binom}
-E\sbrak{X}= np
-\end{align}
-\solution
-From 
-\eqref{eq:mgf-mean}
-and 
-\eqref{eq:mgf-binom},
-\begin{align}
-E\sbrak{X} 
-&= \frac{d(q + pz)^n}{dz}\vert_{z=1}
 \\
-&=np(q + pz)^{n-1}|_{z=1}
-\\
-&= np(q + p)^{n-1}
+M_X(z)&=\prod_{i=1}^{n}M_{X_i}(z)
 \end{align}
-yielding
-\eqref{eq:mean-binom}
-\begin{align}
-\because p+q=1
-\end{align}
-\item In a hurdle race, a player has to cross 10 hurdles. The probability that he will
-clear each hurdle is $\frac{5}{6}$. What is the probability that he will knock down fewer than 2 hurdles?
-\solution See the following code
-		\lstinputlisting{codes/binomial/binomial.py}
-\end{enumerate}
-%
-\section{Triangular Distribution}
 
-\renewcommand{\theequation}{\theenumi}
-\renewcommand{\thefigure}{\theenumi}
-\begin{enumerate}[label=\thesection.\arabic*.,ref=\thesection.\theenumi]
-\numberwithin{equation}{enumi}
-\numberwithin{figure}{enumi}
-
-%
-
-\item The desired outcome is
+\item The $n$th moment of $X$ can be expressed as
 \begin{align}
-\label{eq:dice_xdef}
-X &= X_1 + X_2,
-\\
-\implies X &\in \cbrak{1,2,\dots,12}
+\label{eq:mgf-mean}
+E\sbrak{X^n}&= \frac{d^nM_{X}(z^{-1})}{dz^n}\vert_{z=1}
 \end{align}
-%
-The objective is to show that
-\begin{align}
-p_X(n) \ne \frac{1}{11}
-\label{eq:dice_wrong}
-\end{align}
-\item {\em Convolution: }
-From \eqref{eq:dice_xdef},
-\begin{align}
-p_X(n) &= \pr{X_1 + X_2 = n} = \pr{X_1  = n -X_2}
-\\
-&= \sum_{k}^{}\pr{X_1  = n -k | X_2 = k}p_{X_2}(k)
-\label{eq:dice_x_sum}
-\end{align}
-after unconditioning.  $\because X_1$ and $X_2$ are independent,
-\begin{multline}
-\pr{X_1  = n -k | X_2 = k} 
-\\
-= \pr{X_1  = n -k} = p_{X_1}(n-k)
-\label{eq:dice_x1_indep}
-\end{multline}
-From \eqref{eq:dice_x_sum} and \eqref{eq:dice_x1_indep},
-\begin{align}
-p_X(n) = \sum_{k}^{}p_{X_1}(n-k)p_{X_2}(k) = p_{X_1}(n)*p_{X_2}(n)
-\label{eq:dice_x_conv}
-\end{align}
-where $*$ denotes the convolution operation. 
-%\cite{proakis_dsp}.  
-Substituting from \eqref{eq:dice_pmf_xi}
-in \eqref{eq:dice_x_conv},
-\begin{align}
-p_X(n) = \frac{1}{6}\sum_{k=1}^{6}p_{X_1}(n-k)= \frac{1}{6}\sum_{k=n-6}^{n-1}p_{X_1}(k)
-\label{eq:dice_x_conv_x1}
-\end{align}
-\begin{align}
-\because p_{X_1}(k) &= 0, \quad k \le 1, k \ge 6.
-\end{align}
-From \eqref{eq:dice_x_conv_x1},
-%
-\begin{align}
-p_X(n) &= 
-\begin{cases}
-0 & n < 1
-\\
-\frac{1}{6}\sum_{k=1}^{n-1}p_{X_1}(k) &  1 \le n-1 \le  6
-\\
-\frac{1}{6}\sum_{k=n-6}^{6}p_{X_1}(k) & 1 < n-6 \le 6
-\\
-0 & n > 12
-\end{cases}
-\label{eq:dice_x_conv_cond}
-\end{align}
-Substituting from \eqref{eq:dice_pmf_xi} in \eqref{eq:dice_x_conv_cond},
-\begin{align}
-p_X(n) &= 
-\begin{cases}
-0 & n < 1
-\\
-\frac{n-1}{36} &  2 \le n \le  7
-\\
-\frac{13-n}{36} & 7 < n \le 12
-\\
-0 & n > 12
-\end{cases}
-\label{eq:dice_x_conv_final}
-\end{align}
-satisfying \eqref{eq:dice_wrong}.
 \item {\em The $Z$-transform: }
 	\iffalse
 The $Z$-transform of $p_X(n)$ is defined as 
@@ -172,78 +32,4 @@ P_{X_1}(z) =P_{X_2}(z) &= \frac{1}{6}\sum_{n = 1}^{6}z^{-n}
 upon summing up the geometric progression.  
 \fi
 %\cite{proakis_dsp}. 
-From \eqref{eq:dice_xiz} and \eqref{eq:dice_xzprod_def},
-\begin{align}
-P_X(z) &= \cbrak{\frac{z^{-1}\brak{1-z^{-6}}}{6\brak{1-z^{-1}}}}^2
-\\
-&= \frac{1}{36}\frac{z^{-2}\brak{1-2z^{-6}+z^{-12}}}{\brak{1-z^{-1}}^2}
-\label{eq:dice_xzprod}
-\end{align}
-Using the fact that 
-%\cite{proakis_dsp}
-\begin{align}
-p_X(n-k) &\system{Z}P_X(z)z^{-k},
-\\
-nu(n)&\system{Z} \frac{z^{-1}}{\brak{1-z^{-1}}^2}
-\end{align}
-after some algebra, it can be shown that
-%{\tiny
-\begin{multline}
-\frac{1}{36}\lsbrak{\brak{n-1}u(n-1) - 2 \brak{n-7}u(n-7)}
-\\
-\rsbrak{ +\brak{n-13}u(n-13)}
-\\
-\system{Z}
-\frac{1}{36}\frac{z^{-2}\brak{1-2z^{-6}+z^{-12}}}{\brak{1-z^{-1}}^2}
-\label{eq:dice_xz_closed}
-\end{multline}
-%}
-
-where 
-\begin{align}
-u(n) =
-\begin{cases}
-1 & n \ge 0
-\\
-0 & n < 0
-\end{cases}
-\end{align}
-
-From \eqref{eq:dice_xz}, \eqref{eq:dice_xzprod} and \eqref{eq:dice_xz_closed}
-\begin{multline}
-p_{X}(n) = \frac{1}{36}\lsbrak{\brak{n-1}u(n-1) 
-}
-\\
-\rsbrak{- 2 \brak{n-7}u(n-7)+\brak{n-13}u(n-13)}
-\end{multline}
-which is the same as \eqref{eq:dice_x_conv_final}.  Note that  \eqref{eq:dice_x_conv_final} can be obtained from \eqref{eq:dice_xz_closed} using contour integration as well.
-% \cite{proakis_dsp}.  
-
-\item 
-The experiment of rolling the dice was simulated using Python for 10000 samples.  These were generated using Python libraries for uniform distribution. The frequencies for each outcome were then used to compute the resulting pmf, which  is plotted in Figure \ref{fig:dice}.  The theoretical pmf obtained in \eqref{eq:dice_x_conv_final} is plotted for comparison.  
-%
-\begin{figure}[!ht]
-\centering
-\includegraphics[width=\columnwidth]{./figs/sum/pmf.png}
-\caption{Plot of $p_X(n)$.  Simulations are close to the analysis. }
-\label{fig:dice}
-\end{figure}
-\item The python code is available below
-
-	\lstinputlisting{codes/sum/dice.py}
-	\iffalse
-\begin{lstlisting}
-/codes/sum/dice.py
-\end{lstlisting}
-\fi
-
-%\item 
-%We have shown how a simple problem of throwing a dice can be used for learning not just probability but concepts in  signal processing as well.  Inversion of the $Z$-transform for finding the pmf using contour integration, though not discussed here, opens a window to complex analysis too.  Note that the solutions that are provided  can be easily understood using high school math like arithmetic and geometric sums.  Thus, school students can use a bit of college level math to obtain simpler solutions to their problems.  College students can be exposed to advanced mathematics through simple problems from high school texts.  In addition, both can learn how to verify theoretical results through computer simulations.
-
-%\bibliographystyle{tMES}
-%\bibliography{school}
-%
-%\end{document}
 \end{enumerate}
-
-
