--- a/ncert/sum.tex
+++ b/ncert/sum.tex
@@ -1,7 +1,17 @@
 \begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
 	\item Two dice, one blue and one grey, are thrown at the same time.   The event defined by the sum of the two numbers appearing on the top of the dice can have 11 possible outcomes 2, 3, 4, 5, 6, 6, 8, 9, 10, 11 and 12.  A student argues that each of these outcomes has a probability $\frac{1}{11}$.  Do you agree with this argument?  Justify your answer.
+		\\
+		\solution
+From \eqref{eq:dice_x_conv_final}
+and 
+\figref{fig:dice},
+it is obvious that 
+\begin{align}
+p_X(n) \ne \frac{1}{11}.
+\label{eq:dice_wrong}
+\end{align}
 \item Two dice are numbered 1,2,3,4,5,6 and 1,1,2,2,3,3 respectively. They are thrown and the sum of then numbers on them is noted. Find the probability of getting each sum from 2 to 9 seperately
 	\\
 \solution
-%\input{exemplar/10/13/3/23/main.tex}
+\input{exemplar/10/13/3/23/main.tex}
 \end{enumerate}
