--- a/app/mgf.tex
+++ b/app/mgf.tex
@@ -1,20 +1,98 @@
 \begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
+	\item Consider the rv 
+\begin{align}
+	X = X_1 + X_2,
+\label{eq:dice_xdef}
+\end{align}
+where $X_1$ and $X_2$ are independent uniform rvs with pmf given in 
+\eqref{eq:dice_pmf_xi}.
+\item {\em Convolution: }
+From \eqref{eq:dice_xdef},
+\begin{align}
+p_X(n) &= \pr{X_1 + X_2 = n} = \pr{X_1  = n -X_2}
+\\
+&= \sum_{k}^{}\pr{X_1  = n -k | X_2 = k}p_{X_2}(k)
+\label{eq:dice_x_sum}
+\end{align}
+after unconditioning.  $\because X_1$ and $X_2$ are independent,
+\begin{align}
+\pr{X_1  = n -k | X_2 = k} 
+= \pr{X_1  = n -k} = p_{X_1}(n-k)
+\label{eq:dice_x1_indep}
+\end{align}
+From \eqref{eq:dice_x_sum} and \eqref{eq:dice_x1_indep},
+\begin{align}
+p_X(n) = \sum_{k}^{}p_{X_1}(n-k)p_{X_2}(k) = p_{X_1}(n)*p_{X_2}(n)
+\label{eq:dice_x_conv}
+\end{align}
+where $*$ denotes the convolution operation. 
+%\cite{proakis_dsp}.  
+\item (Triangular PMF:) 
+Substituting from \eqref{eq:dice_pmf_xi}
+in \eqref{eq:dice_x_conv},
+\begin{align}
+p_X(n) = \frac{1}{6}\sum_{k=1}^{6}p_{X_1}(n-k)= \frac{1}{6}\sum_{k=n-6}^{n-1}p_{X_1}(k)
+\label{eq:dice_x_conv_x1}
+\end{align}
+\begin{align}
+\because p_{X_1}(k) &= 0, \quad k \le 1, k \ge 6.
+\end{align}
+From \eqref{eq:dice_x_conv_x1},
+%
+\begin{align}
+p_X(n) &= 
+\begin{cases}
+0 & n < 1
+\\
+\frac{1}{6}\sum_{k=1}^{n-1}p_{X_1}(k) &  1 \le n-1 \le  6
+\\
+\frac{1}{6}\sum_{k=n-6}^{6}p_{X_1}(k) & 1 < n-6 \le 6
+\\
+0 & n > 12
+\end{cases}
+\label{eq:dice_x_conv_cond}
+\end{align}
+	Substituting from \eqref{eq:dice_pmf_xi} in \eqref{eq:dice_x_conv_cond},
+\begin{align}
+p_X(n) &= 
+\begin{cases}
+0 & n < 1
+\\
+\frac{n-1}{36} &  2 \le n \le  7
+\\
+\frac{13-n}{36} & 7 < n \le 12
+\\
+0 & n > 12
+\end{cases}
+\label{eq:dice_x_conv_final}
+\end{align}
+%satisfying \eqref{eq:dice_wrong}.
+%\section{Triangular Distribution}
+%\begin{enumerate}[label=\thesection.\arabic*.,ref=\thesection.\theenumi]
+%
+\item 
+The experiment of rolling the dice was simulated using Python for 10000 samples.  These were generated using Python libraries for uniform distribution. The frequencies for each outcome were then used to compute the resulting pmf, which  is plotted in Figure \ref{fig:dice}.  The theoretical pmf obtained in \eqref{eq:dice_x_conv_final} is plotted for comparison.  
+%
+\begin{figure}[H]
+\centering
+\includegraphics[width=\columnwidth]{./figs/sum/pmf.png}
+\caption{Plot of $p_X(n)$.  Simulations are close to the analysis. }
+\label{fig:dice}
+\end{figure}
+\item The python code is available below
+
+	\lstinputlisting{codes/sum/dice.py}
+	\iffalse
+\begin{lstlisting}
+/codes/sum/dice.py
+\end{lstlisting}
+\fi
 \item 
 The $Z$-transform of $X$ is defined as
 \begin{align}
 M_X(z) = E\sbrak{z^{-X}} = \sum_{k=-\infty}^{\infty}p_X(k)z^{-k}
 \label{eq:dice_xz}
 \end{align}
-\item For
-\eqref{eq:dice_pmf_xi},
-the $Z$-transform of $X$ is given by 
-\begin{align}
-P_{X}(z) =  \frac{1}{6}\sum_{n = 1}^{6}z^{-n}
-=\frac{z^{-1}\brak{1-z^{-6}}}{6\brak{1-z^{-1}}}, \quad \abs{z} > 1
-\label{eq:dice_xiz}
-\end{align}
-upon summing up the geometric progression.  
-%From \eqref{eq:dice_xiz}, 
 \item If $X_1$ and $X_2$ are independent, the MGF of 
 \begin{align}
 	X = X_1 + X_2
@@ -23,22 +101,74 @@ is given by
 	\begin{align}
 %p_X(n) &= p_{X_1}(n)*p_{X_2}(n),
 %\\
-M_X(z) &= P_{X_1}(z)P_{X_2}(z)
+M_X(z) &= M_{X_1}(z)M_{X_2}(z)
 \label{eq:dice_xzprod_def}
 \end{align}
 The above property follows from Fourier analysis and is fundamental to signal processing. 
-\item Let 
-$X_i$ be independent.  For 
+\item For
+\eqref{eq:dice_pmf_xi},
+the $Z$-transform of $X_1$ is given by 
 \begin{align}
-X &= X_1+X_2+...+X_n,
+M_{X_1}(z) =  \frac{1}{6}\sum_{n = 1}^{6}z^{-n}
+=\frac{z^{-1}\brak{1-z^{-6}}}{6\brak{1-z^{-1}}}, \quad \abs{z} > 1
+\label{eq:dice_xiz}
+\end{align}
+upon summing up the geometric progression.  
+\item From \eqref{eq:dice_xiz} and \eqref{eq:dice_xzprod_def},
+\begin{align}
+M_X(z) &= \cbrak{\frac{z^{-1}\brak{1-z^{-6}}}{6\brak{1-z^{-1}}}}^2
 \\
-M_X(z)&=\prod_{i=1}^{n}M_{X_i}(z)
+&= \frac{1}{36}\frac{z^{-2}\brak{1-2z^{-6}+z^{-12}}}{\brak{1-z^{-1}}^2}
+\label{eq:dice_xzprod}
 \end{align}
-
-\item The $n$th moment of $X$ can be expressed as
+Using the fact that 
+%\cite{proakis_dsp}
 \begin{align}
-\label{eq:mgf-mean}
-E\sbrak{X^n}&= \frac{d^nM_{X}(z^{-1})}{dz^n}\vert_{z=1}
+\begin{split}
+p_X(n-k) &\system{Z}P_X(z)z^{-k},
+\\
+nu(n)&\system{Z} \frac{z^{-1}}{\brak{1-z^{-1}}^2}
+\end{split}
+\label{eq:dice_xdef_props}
 \end{align}
+after some algebra, it can be shown that
+%{\tiny
+\begin{multline}
+\frac{1}{36}\sbrak{\brak{n-1}u(n-1) - 2 \brak{n-7}u(n-7)
+ +\brak{n-13}u(n-13)}
+\\
+\system{Z}
+\frac{1}{36}\frac{z^{-2}\brak{1-2z^{-6}+z^{-12}}}{\brak{1-z^{-1}}^2}
+\label{eq:dice_xz_closed}
+\end{multline}
+%}
 
+where 
+\begin{align}
+u(n) =
+\begin{cases}
+1 & n \ge 0
+\\
+0 & n < 0
+\end{cases}
+\end{align}
+From \eqref{eq:dice_xz}, \eqref{eq:dice_xzprod} and \eqref{eq:dice_xz_closed}
+\begin{align}
+p_{X}(n) = \frac{1}{36}\lsbrak{\brak{n-1}u(n-1) 
+}
+\rsbrak{- 2 \brak{n-7}u(n-7)+\brak{n-13}u(n-13)}
+\end{align}
+which is the same as \eqref{eq:dice_x_conv_final}.  Note that  \eqref{eq:dice_x_conv_final} can be obtained from \eqref{eq:dice_xz_closed} using contour integration as well.
+% \cite{proakis_dsp}.  
+
+
+%\item 
+%We have shown how a simple problem of throwing a dice can be used for learning not just probability but concepts in  signal processing as well.  Inversion of the $Z$-transform for finding the pmf using contour integration, though not discussed here, opens a window to complex analysis too.  Note that the solutions that are provided  can be easily understood using high school math like arithmetic and geometric sums.  Thus, school students can use a bit of college level math to obtain simpler solutions to their problems.  College students can be exposed to advanced mathematics through simple problems from high school texts.  In addition, both can learn how to verify theoretical results through computer simulations.
+
+%\bibliographystyle{tMES}
+%\bibliography{school}
+%
+%\end{document}
 \end{enumerate}
+
+
