--- a/main.tex
+++ b/main.tex
@@ -119,6 +119,8 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \input{ncert/sum.tex}
 \newpage
 	\section{Binomial}
+\subsection{Formulae}
+\input{app/binom.tex}
 \subsection{NCERT}
 %\input{ncert/binomial.tex}
     \section{Gaussian}
@@ -149,7 +151,6 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \input{ncert/markov.tex}
 \section{Continuous Distributions}
 \input{probability/univar.tex}
-%\iffalse
 \section{Maximum Likelihood Detection: BPSK}
 \input{probability/ml.tex}
 \section{Transformation of Random Variables}
@@ -167,10 +168,9 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \backmatter
 \fi
 \appendix
-\iffalse
 \section{ Z-transform}
-\section{Distributions}
 \input{conv-trans/main.tex}
+\iffalse
 \section{Central Limit Theorem}
 \subsection{Binomial}
 \input{app/clt-binom.tex}
