--- a/ncert/alg.tex
+++ b/ncert/alg.tex
@@ -1,13 +1,13 @@
-\begin{enumerate}[label=\thechapter.\arabic*,ref=\thechapter.\theenumi]
+\begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
 	\item Given that a fair coin is marked 1 on one face and 6 on the other and a fair die are tossed. Find the probability that the sum turns up to be 3 and 12. 
 		\\
 		\solution
-		\input{ncert/11/16/3/5/main.tex}
+% \input{ncert/11/16/3/5/main.tex}
 	\item A fair coin is tossed four times, and a person win Re 1 for each head and lose Rs 1.50 for each tail that turns up.
 From the sample space calculate how many different amounts of money you can have after four tosses and the probability of having each of these amounts.\\
 		\\
 		\solution
-		\input{ncert/11/16/3/7/main.tex}
+% \input{ncert/11/16/3/7/main.tex}
 
 
 \item A black and a red dice are rolled.
@@ -18,37 +18,37 @@ that the black die resulted in a 5.
 resulted in a number less than 4.
 \end{enumerate}
 		\solution
-		\input{ncert/12/13/1/10/main.tex}
+% \input{ncert/12/13/1/10/main.tex}
 	\item Given that 2 numbers appearing on throwing two dice are different. Find the probability of the event ‘ the sum of numbers on the dice is 4’ .
 		\\
 		\solution
-		\input{ncert/12/13/1/14/main.tex}
+% \input{ncert/12/13/1/14/main.tex}
  \item If each element of a $2\times 2$ determinant is either zero or one. What is the probability that the value of the determinant is positive ? 
  (Assume that the individual entries of the determinant are chosen independently each value being assumed with probability $\frac{1}{2}$) \\
  \solution
-		\input{ncert/12/13/6/14/main.tex}
+% \input{ncert/12/13/6/14/main.tex}
 \item Two customers Shyam and Ekta are visiting a particular shop in the same week(Tuesday to Saturday). Each is equally likely to visit the shop on any day as on another day. What is the probability that both will visit the shop on (i) the same day? (ii) consecutive days? (iii) different days?
 \\
-	\input{ncert/10/15/2/1/main.tex}
+% \input{ncert/10/15/2/1/main.tex}
 \item Let X represent the difference between the number of heads and the number of tails obtained when a coin is tossed 6 times. What are the possible values of X? Also find the Probability distribution of X.
 \\
-       \input{ncert/12/13/4/3/assignment3.tex}
+% \input{ncert/12/13/4/3/assignment3.tex}
        \item A black and a red dice are rolled.\\
 (a) find the conditional probability of obtaining a sum greater than 9,given that the black dice resulted in a 5.\\
 (b) find the conditional probability of obtaining the sum 8,given that the red die resulted in a number less than 4.\\
 \solution
-\input{ncert/12/13/1/10(new)/ncert.tex}
+% \input{ncert/12/13/1/10(new)/ncert.tex}
 \item A fair die is thrown two times. Let A and B be the events, 'same number each time', and a 'a total score is 10 or more', respectively. Determine whether or not A and B are independent.\\
 \solution
 \\
-\input{ncert/12/13/3/2(new)/main.tex}
+% \input{ncert/12/13/3/2(new)/main.tex}
 \item
 Two dice are thrown together. Find the probability that the product of the numbers on the top of the dice is less than 9\\
 \solution
-\input{exemplar/10/13/3/22/main.tex}
+% \input{exemplar/10/13/3/22/main.tex}
 \item
 Two dice are thrown together. Find the probability that the product of the numbers on the top of the dice is 6 , 7 , 12 \\
 \solution
-\input{exemplar/10/13/3/16/main.tex}
+% \input{exemplar/10/13/3/16/main.tex}
 \end{enumerate}
  
