--- a/ncert/markov.tex
+++ b/ncert/markov.tex
@@ -1,16 +1,16 @@
-\begin{enumerate}[label=\thechapter.\arabic*,ref=\thechapter.\theenumi]
+\begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
 	\item Consider the experiment of throwing a die.
     \begin{itemize}
         \item If a multiple of 3 comes up, throw the die again
         \item If any other number comes, toss a coin.
     \end{itemize}
      Find the conditional probability of the event \lq the coin shows a tail\rq, given that \lq at least one die shows a 3\rq.\\
-		\input{ncert/12/13/1/15m/markov.tex}
+% \input{ncert/12/13/1/15m/markov.tex}
   \item  A and B throw a pair of dice alternately. A wins the game if he gets a total of
 6 and B wins if she gets a total of 7. It A starts the game, find the probability of
 winning the game by A in third throw of the pair of dice.
 \\
-\input{exemplar/12/13/3/38/main.tex}
+% \input{exemplar/12/13/3/38/main.tex}
 \item A state transition diagram with states $A$, $B$, and $C$, and transition probabilities $p_1$, $p_2$,...., $p_7$ is shown in the figure (e.g., $p_1$ denotes the probability of transition from state $A$ to $B$). For this state diagram, select the statement(s) which is/are universally true
 \begin{figure}[ht!]
 	\centering
@@ -24,5 +24,5 @@ winning the game by A in third throw of the pair of dice.
 \item $p_1 + p_4 + p_7 = 1$\label{eq:28/2022/2}
 \item $p_2 + p_5 +p_7 = 1$
 \end{enumerate}
-\input{gate/EC/2022/48/main.tex}
+% \input{gate/EC/2022/48/main.tex}
 \end{enumerate}
