--- a/ncert/moment.tex
+++ b/ncert/moment.tex
@@ -1,9 +1,9 @@
-\begin{enumerate}[label=\thechapter.\arabic*,ref=\thechapter.\theenumi]
+\begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
 \item 
 Find the mean number of heads in three tosses of a fair coin.
 \\
 \solution
-\input{ncert/12/13/4/10/binom.tex}
+% \input{ncert/12/13/4/10/binom.tex}
 
 \item Two dice are thrown simultaneously. If X denotes the number of sixes, find the
 expectation of X.
@@ -27,11 +27,11 @@ he is in favour. Find E(X) and Var (X).\\
 
 \item In a dice game, a player pays a stake of Re 1 for each throw of a die. She receives Rs 5 if the die shows a 3, Rs 2 if the die shows a 1 or 6, and nothing otherwise. What is the player’s expected profit per throw over a long series of throws?.\\
 \solution
-\input{exemplar/12/13/3/13/main.tex}
+% \input{exemplar/12/13/3/13/main.tex}
 
 \item A die is thrown three times. Let X be 'the number of twos seen'. Find the expectation of X.\\
 \solution
-\input{exemplar/12/13/3/28/main.tex}
+% \input{exemplar/12/13/3/28/main.tex}
 
 Choose the correct answer in each of the following:
 
@@ -59,11 +59,11 @@ number of aces obtained. Then the value of E(X) is
 \end{enumerate}
 
 \item Suppose $10000$ tickets are sold in a lottery each for Re. $1$. First prize is of Rs $3000$ and the second prize is of Rs $2000$. There are three third prizes of Rs. $500$ each. If you buy one ticket, what is your expectation.
-\input{exemplar/12/13/3/15/main.tex}
+% \input{exemplar/12/13/3/15/main.tex}
 \item Consider the probability distribution of a random variable X:
 \begin{table}[H]
         \centering
-        \input{exemplar/12/13/3/24/tables/tab.tex}
+% \input{exemplar/12/13/3/24/tables/tab.tex}
         \label{tab:exemplar/12/13/3/24}
     \end{table}
 Calculate
@@ -72,17 +72,17 @@ Calculate
 \item var$\brak{\frac{X}{2}}$
 \end{enumerate}
 \solution
-\input{exemplar/12/13/3/24/main.tex}
+% \input{exemplar/12/13/3/24/main.tex}
 \item The random variable $X$ can take only the values $0,1,2$. Given that $\pr{X=0}=\pr{X=1}=p$ and that $E\brak{X^2} = E\brak{X}$, find the value of $p$.
 \\
-\input{exemplar/12/13/3/36/main.tex}
+% \input{exemplar/12/13/3/36/main.tex}
 \item Find the variance of distribution.
 \begin{table}[!ht]
-	\input{exemplar/12/13/3/37/tables/table.tex}
+% \input{exemplar/12/13/3/37/tables/table.tex}
 \end{table}\\
-\input{exemplar/12/13/3/37/main.tex}
+% \input{exemplar/12/13/3/37/main.tex}
 \item Two cards are drawn successively without replacement from a well shuffled deck of cards. Find the mean and standard variation of random variable $X$ where $X$ is the number of aces.
-\input{exemplar/12/13/3/53/main.tex}
+% \input{exemplar/12/13/3/53/main.tex}
 \item The probability distribution of a discrete random variable X is given as under:
 \begin{table}[ht]
     \centering
@@ -99,7 +99,7 @@ Calculate:
 \item The value of A if E(X) = 2.94
 \item Variance of X.
 \end{enumerate}
-\input{exemplar/12/13/3/50/main.tex}
+% \input{exemplar/12/13/3/50/main.tex}
 \item The probability distribution of a random variable $X$ is given as under:
 \begin{align*}
     p_X(x) =
@@ -115,7 +115,7 @@ where k is a constant. Calculate:
     \item $E\brak{3X^2}$
     \item $\pr{X \geq 4}$
 \end{enumerate}
-\input{exemplar/12/13/3/51/main.tex}
+% \input{exemplar/12/13/3/51/main.tex}
 \item Two probability distributions of the discrete random variable $X$ and $Y$ are given below.\\
 \begin{table}[h!]
 \begin{minipage}{0.45\linewidth}
@@ -148,12 +148,12 @@ $P(Y)$ & $\frac{1}{5}$ & $\frac{3}{10}$ & $\frac{2}{5}$ & $\frac{1}{10}$ \\
 \end{table}
 Prove that $E\brak{Y^2}=2E\brak{X}$\\
 \solution \\
-\input{exemplar/12/13/3/30/main.tex}
+% \input{exemplar/12/13/3/30/main.tex}
 \item For the following probability distribution determine standard deviation of the random variable $X$.
 \begin{table}[h]
-	\input{exemplar/12/13/3/26/tables/table.tex}
+% \input{exemplar/12/13/3/26/tables/table.tex}
 \end{table}\\
-\input{exemplar/12/13/3/26/main.tex}
+% \input{exemplar/12/13/3/26/main.tex}
 \item Let $X$ be a discrete random variable whose probability distribution is defined as follows:
 \begin{align*}
 \pr {X=x} =
@@ -171,17 +171,17 @@ where $k$ is a constant. Calculate
 \end{enumerate}
 \solution
 \\
-\input{ncert/12/13/3/49/main.tex}
+% \input{ncert/12/13/3/49/main.tex}
 \item The probability distribution of a discrete random variable $X$ is given as under:
 \begin{table}[!ht]
-	\input{exemplar/12/13/3/50a/tables/spectral.tex}
+% \input{exemplar/12/13/3/50a/tables/spectral.tex}
 \end{table}\\
 Calculate:
 \begin{enumerate}[label=\alph*)]
 \item The value of $A$ if $E(X)$ =2.94
 \item Variance of $X$.
 \end{enumerate}
-\input{exemplar/12/13/3/50a/main.tex}
+% \input{exemplar/12/13/3/50a/main.tex}
 \item A discrete random variable X has the probability distribution given as below:
 \begin{table}[H]
 \begin{tabular}{|c|c|c|c|c|}
@@ -197,12 +197,12 @@ P(X) & $k$ & $k^{2}$ & $2k^{2}$ & $k$ \\
 \item{Determine the mean of the distribution}
 \end{enumerate}
 \solution \\
-\input{exemplar/12/13/3/10/main.tex}
+% \input{exemplar/12/13/3/10/main.tex}
 \item There are 5 cards numbered 1 to 5, one number on one card. Two cards are drawn at random without replacement. Let X denote the sum of the numbers on two cards drawn. Find the mean and variance of X.
-\input{exemplar/12/13/3/55/main.tex}
+% \input{exemplar/12/13/3/55/main.tex}
 \item For the following probability distribution:
 \begin{table}[!ht]
-	\input{exemplar/12/13/3/88/tables/table1.tex}
+% \input{exemplar/12/13/3/88/tables/table1.tex}
 \end{table}\\
 $E\brak{X}$ is equal to:
 \begin{enumerate}
@@ -211,22 +211,22 @@ $E\brak{X}$ is equal to:
 	\item $-2$ 
 	\item $-1.8$ 
 \end{enumerate}
-\input{exemplar/12/13/3/88/main.tex}
+% \input{exemplar/12/13/3/88/main.tex}
 \item If $A$, $B$ and $C$ are three independent events such that $\pr{A} = \pr{B} = \pr{C} = p$, then P(At least two of $A, B, C$ occur) = $3p^2-2p^3$\\
-	\input{exemplar/12/13/3/103/main.tex}
+% \input{exemplar/12/13/3/103/main.tex}
 \item For the following probability distribution
 \begin{table}[!htb]
-	\input{exemplar/12/13/3/89/tables/table.tex}
+% \input{exemplar/12/13/3/89/tables/table.tex}
 	\caption{Probability Distribution}
 	\label{table1:ncert/12/13/3/89/}
 \end{table}\\
 E($X^{2}$)is equal to\\
 (A)3  \qquad (B)5 \qquad (C)7 \qquad (D)10
-\input{exemplar/12/13/3/89/main.tex}
+% \input{exemplar/12/13/3/89/main.tex}
 \item A die is tossed twice. A ‘success’ is getting an even number on a toss. Find the variance of the number of successes.
 	\\	\input{exemplar/12/13/3/54/main.tex}
  \item A biased die is such that $\pr{4} = \frac{1}{10}$ and other scores being equally likely. The die is tossed twice. If X is the 'number of fours seen', find the variance of the random variable X.\\
- \input{exemplar/12/13/3/27/main.tex}
+% \input{exemplar/12/13/3/27/main.tex}
  \item One million random numbers are generated from a statistically stationary process with a Gaussian distribution with mean zero and standard deviation $\sigma_0$.\\
 The $\sigma_0$ is estimated by randomly drawing out 10,000 number of samples ($x_n$). The estimates $\hat{\sigma}^2_1$ and $\hat{\sigma}^2_2$ are computed in the following two ways:
 \[
@@ -243,11 +243,11 @@ Which of the following statements is true?
 \item $E(\hat{\sigma}_1) = E(\hat{\sigma}_2)$ \label{eq:Option4}
 \end{enumerate} \hfill ( GATE EE 2023) \\
 \solution
-\input{gate/EE/2023/25/main.tex}
+% \input{gate/EE/2023/25/main.tex}
 \item If X is the number of tails in three tosses of  coin, determine the standard deviation of X. \\
-\input{exemplar/12/13/3/12/main.tex}
+% \input{exemplar/12/13/3/12/main.tex}
 \item In a game, a man wins a rupee for a six and loses a rupee for any other number
 when a fair die is thrown. The man decided to throw a die thrice but to quit as
 and when he gets a six. Find the expected value of the amount he wins / loses.\\
-\input{ncert/12/13/6/11/ncert.tex}
+% \input{ncert/12/13/6/11/ncert.tex}
 \end{enumerate}
