--- a/app/mgf.tex
+++ b/app/mgf.tex
@@ -88,12 +88,12 @@ The experiment of rolling the dice was simulated using Python for 10000 samples.
 \end{lstlisting}
 \fi
 \item 
-The $Z$-transform of $X$ is defined as
+The $Z$-transform  of $X$ is defined as
 \begin{align}
 M_X(z) = E\sbrak{z^{-X}} = \sum_{k=-\infty}^{\infty}p_X(k)z^{-k}
 \label{eq:dice_xz}
 \end{align}
-\item If $X_1$ and $X_2$ are independent, the MGF of 
+\item If $X_1$ and $X_2$ are independent, the $Z$-transform  of 
 \begin{align}
 	X = X_1 + X_2
 \end{align}
