--- a/gvv.sty
+++ b/gvv.sty
@@ -35,6 +35,7 @@ columns=fullflexible
 \providecommand{\mtx}[1]{\mathbf{#1}}
 \providecommand{\mean}[1]{E\left[ #1 \right]}
 \providecommand{\dec}[2]{\ensuremath{\overset{#1}{\underset{#2}{\gtrless}}}}
+\providecommand{\bnm}[2]{\text{Binom}\ensuremath{\left(#1,#2\right)}}
 %\numberwithin{equation}{subsection}
 \providecommand{\prt}[2]{\ensuremath{p_{#1}^{\left(#2\right)} }}        % own macro for this question
 \newcommand{\sgn}{\mathop{\mathrm{sgn}}}
