--- a/main.tex
+++ b/main.tex
@@ -122,7 +122,7 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \subsection{Formulae}
 \input{app/binom.tex}
 \subsection{NCERT}
-%\input{ncert/binomial.tex}
+\input{ncert/binomial.tex}
     \section{Gaussian}
 \subsection{NCERT}
 %\input{ncert/gauss.tex}
@@ -166,11 +166,9 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 
 %\include{ch02} 
 \backmatter
-\fi
 \appendix
 \section{ Z-transform}
 \input{conv-trans/main.tex}
-\iffalse
 \section{Central Limit Theorem}
 \subsection{Binomial}
 \input{app/clt-binom.tex}
@@ -178,15 +176,13 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \input{app/ident.tex}
 \section{Random Number Genration Using Shift Registers}
 \input{random_number/main.tex}
-\fi
-\iffalse
 \section{NCERT}
 \input{app/ncert.tex}
 \latexprintindex
 \fi
 
-
 \end{document}
+
 
 
 \newpage
@@ -214,6 +210,4 @@ First manual appeared in January 2018
 First edition published on July 10, 2024
 \\
 In this edition, some incorrect solutions were removed.  All figures redrawn. More problems added.
-
-
 
