--- a/ncert/binomial.tex
+++ b/ncert/binomial.tex
@@ -33,12 +33,7 @@
 \item $E$ : at most two tails, $F$ : at least one tail
 \end{enumerate}
 \solution 
- \input{ncert/12/13/1/6/cond.tex}
-\item A die is tossed thrice. Find the probability of getting an odd number at least once.
-%		\label{ncert/12/13/2/12}
-		\\
-	\solution
-% \input{ncert/12/13/2/12/binom.tex}
+ \input{ncert/12/13/1/6/main.tex}
 \item Find the probability distribution of
 \begin{enumerate}
 	\item number of heads in two tosses of a coin.
@@ -46,7 +41,7 @@
 	\item number of heads in four tosses of a coin.
 \end{enumerate}
 \solution
-% \input{ncert/12/13/4/4/dist.tex}
+ \input{ncert/12/13/4/4/dist.tex}
 \item Find the probability distribution of the number of successes in two tosses of a die,
 where a success is defined as\\
 \begin{enumerate}
