--- a/ncert/sum.tex
+++ b/ncert/sum.tex
@@ -14,4 +14,9 @@ p_X(n) \ne \frac{1}{11}.
 	\\
 \solution
 \input{exemplar/10/13/3/23/main.tex}
+\item A die is tossed thrice. Find the probability of getting an odd number at least once.
+%		\label{ncert/12/13/2/12}
+%		\\
+%	\solution
+% \input{ncert/12/13/2/12/binom.tex}
 \end{enumerate}
