\input{ncert/12/13/4/5/binom.tex} revised

--- a/ncert/binomial.tex
+++ b/ncert/binomial.tex
@@ -43,13 +43,13 @@
 \solution
  \input{ncert/12/13/4/4/dist.tex}
 \item Find the probability distribution of the number of successes in two tosses of a die,
-where a success is defined as\\
+where a success is defined as
 \begin{enumerate}
 \item number greater than 4
 \item six appears on at least one die
 \end{enumerate}
 \solution
-% \input{ncert/12/13/4/5/binom.tex}
+ \input{ncert/12/13/4/5/binom.tex}
 \item There are 5\% defective items in a large bulk of items. What is the probability that a sample of 10 items will include not more than one defective item?
 	\\
 \solution
