--- a/ncert/binomial.tex
+++ b/ncert/binomial.tex
@@ -53,7 +53,7 @@ where a success is defined as
 \item There are 5\% defective items in a large bulk of items. What is the probability that a sample of 10 items will include not more than one defective item?
 	\\
 \solution
-% \input{ncert/12/13/5/3/main.tex}
+ \input{ncert/12/13/5/3/main.tex}
 \item Five cards are drawn successively with replacement from a well-shuffled deck
 of 52 cards. What is the probability that
 \begin{enumerate}
@@ -62,7 +62,7 @@ of 52 cards. What is the probability that
     \item none is a spade?
 \end{enumerate}
 \solution
-% \input{ncert/12/13/5/4/binom.tex}
+ \input{ncert/12/13/5/4/binom.tex}
 \item The probability that a bulb produced by a factory will fuse after 150 days of use
 is $0.05$. Find the probability that out of 5 such bulbs
 \begin{enumerate}
