--- a/ncert/binomial.tex
+++ b/ncert/binomial.tex
@@ -74,7 +74,7 @@ is $0.05$. Find the probability that out of 5 such bulbs
 will fuse after 150 days of use.
 \\
 \solution
-% \input{ncert/12/13/5/5/binom.tex}
+ \input{ncert/12/13/5/5/binom.tex}
 \item A bag consists of 10 balls each marked with one of the digits 0 to 9. If 4 balls are drawn successively with replacement from the bag, what is the probability that none is marked with the digit 0?
 \\
 \solution
