--- a/ncert/binomial.tex
+++ b/ncert/binomial.tex
@@ -81,26 +81,26 @@ will fuse after 150 days of use.
  \input{ncert/12/13/5/6/main.tex}
 \item How many times must a man toss a fair coin so that the probability of having at least one head is more than 90\%?
 \\
-% \input{ncert/12/13/6/10/binom.tex}
-\item In an examination, 20 questions of true-false type are asked. Suppose a student tosses a fair coin to determine his answer to each question. If the coin falls heads, he answer true; if it falls tails, he answer false. Find the probability that he answers at least 12 questions correctly.\\
+\solution  \input{ncert/12/13/6/10/binom.tex}
+\item In an examination, 20 questions of true-false type are asked. Suppose a student tosses a fair coin to determine his answer to each question. If the coin falls heads, he answer true; if it falls tails, he answer false. Find the probability that he answers at least 12 questions correctly.
 \\
 \solution
-% \input{ncert/12/13/5/7/binom.tex}
-\item Find the probability of getting 5 twice in 7 throws of a dice.\\
+ \input{ncert/12/13/5/7/binom.tex}
+\item Find the probability of getting 5 twice in 7 throws of a dice.
 \\
 \solution
-% \input{ncert/12/13/5/11/binom.tex}
+ \input{ncert/12/13/5/11/binom.tex}
 \item On a multiple choice examination with three possible answers for each of the five questions, what is the probability that a candidate would get four or more correct answers just by guessing$?$
 \\
 \solution
-% \input{ncert/12/13/5/9/binom.tex}
+ \input{ncert/12/13/5/9/binom.tex}
 \item Find the probability of throwing at most 2 sixes in 6 throws of a single die.\\
 \solution
-% \input{ncert/12/13/5/12/binom.tex}
+ \input{ncert/12/13/5/12/binom.tex}
 \item Suppose that 90 \% of people are right-handed. What is the probability that atmost 6 of a random sample of 10 people are right-handed. 
 \\
 \solution
-% \input{ncert/12/13/6/4/main.tex}
+ \input{ncert/12/13/6/4/binom.tex}
   \item An urn contains 25 balls of which 10 balls bear a mark `X' and the 
     remaining 15 bear a mark `Y'. A ball is drawn at random from the urn, its 
     mark is noted down and it is replaced. If 6 balls are drawn in this way, 
