\input{ncert/11/16/3/2/binom.tex} done

--- a/ncert/binomial.tex
+++ b/ncert/binomial.tex
@@ -138,7 +138,7 @@ tossed twice, find the probability distribution of number of tails.
 \item A coin is tossed twice, what is the probability that atleast one tail occurs?
 \\
 \solution
-% \input{ncert/11/16/3/2/binom.tex}
+ \input{ncert/11/16/3/2/binom.tex}
 \item From a lot of 30 bulbs which include 6 defectives, a sample of 4 bulbs is drawn
 at random with replacement. Find the probability distribution of the number of
 defective bulbs.
