--- a/ncert/binomial.tex
+++ b/ncert/binomial.tex
@@ -144,6 +144,7 @@ at random with replacement. Find the probability distribution of the number of
 defective bulbs.
  \item Suppose $X$ is a binomial distribution $B\left(6,\frac{1}{2}\right)$. Show that $X=3$ is the most likely outcome.
 (Hint : $P(X=3)$ is the maximum among all $P(x_i),x_i=0,1,2,3,4,5,6$)
+\\ \solution 
  \input{ncert/12/13/5/8/main.tex}
 \item A fair coin is tossed four times, and a person win Re $1$ for each head and lose Rs $1.5$ for each tail that turns up.\\
 From the sample space calculate how many different amounts of money you can have after four tosses and the probability of having each of these amounts.
