--- a/ncert/binomial.tex
+++ b/ncert/binomial.tex
@@ -150,7 +150,7 @@ defective bulbs.
 From the sample space calculate how many different amounts of money you can have after four tosses and the probability of having each of these amounts.
 \\
 \solution
-% \input{ncert/11/16/3/7a/Q11.16.3.7.tex}
+ \input{ncert/11/16/3/7a/main.tex}
 \item It is known that 10 $\%$ of certain articles manufactured are defective. What is the probability that in a random sample space of 12 such articles,9 are defective? \\
 \solution
 % \input{ncert/12/13/5/13/12.13.5.13/main.tex}
