--- a/app/clt-binom.tex
+++ b/app/clt-binom.tex
@@ -1,16 +1,4 @@
-\begin{enumerate}[label=\thechapter.\arabic*,ref=\thechapter.\theenumi]
-\numberwithin{equation}{enumi}
-\numberwithin{figure}{enumi}
-\numberwithin{table}{enumi}
-\item Let
-\begin{align}
-	X=\text{Bin}(n,p).
-\end{align}
-The mean and variance are then given by 
-\begin{align}
-    \mu = np,\,
-    \sigma^2 = npq.
-\end{align}
+\begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
 \item For large values of $n,k, n-k$, by Stirling's Approximation.
 \begin{align}
 \begin{split}
