--- a/main.tex
+++ b/main.tex
@@ -123,10 +123,13 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \input{app/binom.tex}
 \subsection{NCERT}
 \input{ncert/binomial.tex}
-    \section{Gaussian}
-\subsection{NCERT}
-%\input{ncert/gauss.tex}
 \newpage
+    \section{Gaussian}
+\subsection{Central Limit Theorem}
+\input{app/clt.tex}
+\subsection{NCERT}
+\input{ncert/gauss.tex}
+%\newpage
 \section{Random Variables}
 \subsection{NCERT}
 \input{axioms/boolean/rand.tex}
@@ -170,7 +173,7 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \section{ Z-transform}
 \input{conv-trans/main.tex}
 \section{Central Limit Theorem}
-\subsection{Binomial}
+\label{app:clt-binom}
 \input{app/clt-binom.tex}
 \section{Identities}
 \input{app/ident.tex}
