--- a/ncert/binomial.tex
+++ b/ncert/binomial.tex
@@ -178,6 +178,7 @@ there will be at least one defective watch?
 \\	
 \solution
 \input{exemplar/12/13/3/23/main.tex}
+\iffalse
     \section{Miscellaneous}
 \begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
 \item  The random variable $X$ has a probability distribution \pr{X} of the following form, where $k$ is some number 
@@ -204,30 +205,28 @@ variable. Give reasons for your answer
 \begin{enumerate}
 
 \item \begin{table}[ht!]\centering
-% \input{ncert/13/4/tables/Book.tex}
+ \input{ncert/13/4/tables/Book.tex}
 \end{table}
 
 \item \begin{table}[ht!]\centering
-% \input{ncert/13/4/tables/Book2.tex}
+ \input{ncert/13/4/tables/Book2.tex}
 \end{table}
 
 \item  \begin{table}[ht!]\centering
-% \input{ncert/13/4/tables/Book3.tex}	
+ \input{ncert/13/4/tables/Book3.tex}	
 \end{table}
 
 \item  \begin{table}[ht!]\centering
-% \input{ncert/13/4/tables/Book5.tex}	
+ \input{ncert/13/4/tables/Book5.tex}	
 \end{table} 
 
 
 \end{enumerate}
-\item A random variable X has the following probability distribution\\
-
+\item A random variable X has the following probability distribution.
 Determine
-
 \begin{enumerate}
 \begin{table}[ht!]\centering
-% \input{ncert/13/4/tables/Book10.tex}
+ \input{ncert/13/4/tables/Book10.tex}
 \end{table}
 \item k
 \item P$(X < 3)$
@@ -401,4 +400,5 @@ two children, what is the conditional probability that both are girls given that
 \solution
 %\input{exemplar/10/13/1/22/main.tex}
 \end{enumerate}
+\fi
 \end{enumerate}
