fixed gaussian appendix issue and references.

--- a/app/clt-binom.tex
+++ b/app/clt-binom.tex
@@ -94,6 +94,7 @@ upon substituting from
 	\sqrt{\frac{1}{2\pi npq}} e^{-\frac{(k-np)^2}{2npq}}
      =\frac{1}{\sigma\sqrt{2\pi}}e^{-\frac{(k-\mu)^2}{2\sigma^2}}
 \end{align}
+\iffalse
 \item A comparison of Binomial and Gaussian pmf/pdf is provided in 
 	Figs. 
   \ref{fig:ncert/12/13/6/4/1}
@@ -113,4 +114,5 @@ upon substituting from
   \label{fig:ncert/12/13/6/4/2}
 %\end{subfigure}
 \end{figure}
+\fi
 \end{enumerate}
