--- a/main.tex
+++ b/main.tex
@@ -169,12 +169,8 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 
 %\include{ch02} 
 \backmatter
-\appendix
 \section{ Z-transform}
 \input{conv-trans/main.tex}
-\section{Central Limit Theorem}
-\label{app:clt-binom}
-\input{app/clt-binom.tex}
 \section{Identities}
 \input{app/ident.tex}
 \section{Random Number Genration Using Shift Registers}
@@ -183,6 +179,10 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \input{app/ncert.tex}
 \latexprintindex
 \fi
+\appendices
+\section{Central Limit Theorem}
+\label{app:clt-binom}
+\input{app/clt-binom.tex}
 
 \end{document}
 
